--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	"type": "module",
 	"dependencies": {
 		"daisyui": "^2.51.6",
-		"flowbite": "^1.6.5"
+		"flowbite": "^1.6.5",
+		"svelte-confetti": "^1.2.2",
+		"web-vitals": "^3.3.1"
 	}
 }
