--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^2.4.3",
 		"daisyui": "^2.51.6",
 		"flowbite": "^1.6.5",
 		"svelte-confetti": "^1.2.2",
