--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^2.4.3",
+		"@vercel/analytics": "^1.0.1",
 		"daisyui": "^2.51.6",
 		"flowbite": "^1.6.5",
 		"svelte-confetti": "^1.2.2",
