--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^2.4.3",
 		"@vercel/analytics": "^1.0.1",
+		"clipboard": "^2.0.11",
 		"daisyui": "^2.51.6",
 		"flowbite": "^1.6.5",
 		"svelte-confetti": "^1.2.2",
